fixed boxes being cut off on carousel headline

--- a/components/news-box/news-box.less
+++ b/components/news-box/news-box.less
@@ -60,7 +60,7 @@
           }
           @media @desktop-m{
             font-size: 44px;
-            margin-bottom: 5px;
+            padding-bottom: 5px;
             line-height: 1em;
           }
         }
